welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:14: error: not found: value Baissebrosse
		Baissebrosse()
                ^Array1:15: error: not found: value LeveBrosse
		LeveBrosse()
                ^